# metadata-cleaner

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  meson.build  meson_options.txt  meson_postinstall.py  metadata-cleaner.doap  metadata-cleaner.py.in
.github/workflows/: flatpak-build.yml
.gitlab/issue_templates/: Translations need updating.md
.reuse/: dep5
application/: main.py  meson.build
application/data/: fr.romainvigier.MetadataCleaner.desktop.in  fr.romainvigier.MetadataCleaner.gresource.xml  fr.romainvigier.MetadataCleaner.gschema.xml  fr.romainvigier.MetadataCleaner.metainfo.xml  fr.romainvigier.MetadataCleaner.service.in  meson.build
application/data/css/: style.css
application/data/ui/: AddFilesButton.ui  DetailsView.ui  EmptyView.ui  InfoDetails.ui  MenuButton.ui  MetadataDetails.ui  MetadataDetailsRow.ui  MetadataView.ui  OutButton.ui  SettingsButton.ui  Window.ui
application/metadatacleaner/: meson.build
application/metadatacleaner/modules/: file.py  filestore.py  metadata.py
application/metadatacleaner/ui/: aboutdialog.py  addfilesbutton.py  badge.py  cleaningwarningdialog.py  cleanmetadatabutton.py  creditsrole.py  detailsview.py  emptyview.py  filerow.py  menubutton.py  metadatadetails.py  metadatadetailsrow.py  metadataview.py  outbutton.py  settingsbutton.py  statusindicator.py  window.py
application/po/: LINGUAS  POTFILES  ar.po  az.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr.romainvigier.MetadataCleaner.pot  fy.po  gl.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  it.po  ja.po  ko.po  lt.po  nb_NO.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  (+13 more)
build-aux/: Dockerfile  fr.romainvigier.MetadataCleaner.yaml  postinstall.py  prepare_manifest.py  prepare_release.py  sandbox-fix.patch
data/: fr.romainvigier.MetadataCleaner.desktop.in  fr.romainvigier.MetadataCleaner.gresource.xml  fr.romainvigier.MetadataCleaner.gschema.xml  fr.romainvigier.MetadataCleaner.metainfo.xml  fr.romainvigier.MetadataCleaner.yaml  meson.build
data/css/: style-dark.css  style.css
data/gtk/: help-overlay.ui
data/ui/: AboutDialog.ui  AboutMetadataPrivacyDialog.ui  AboutRemovingMetadataDialog.ui  AddFilesButton.ui  Badge.ui  CleanMetadataButton.ui  CleaningWarningDialog.ui  CreditsRole.ui  DetailsView.ui  EmptyView.ui  FileButton.ui  FilePopover.ui  FileRow.ui  FilesView.ui  InfoDetails.ui  MenuButton.ui  MenuPopover.ui  MetadataDetails.ui  MetadataDetailsRow.ui  MetadataView.ui  OutButton.ui  SaveFilesButton.ui  SaveWarningDialog.ui  SettingsButton.ui  ShortcutsDialog.ui  StatusIndicator.ui  Window.ui
help/: LINGUAS  fr.po  fr.romainvigier.MetadataCleaner.pot  meson.build
help/C/: fr.romainvigier.MetadataCleaner.pot  general.page  index.page  usage.page
help/ar/: ar.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eo/: eo.po
help/es/: es.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/fy/: fy.po
help/gl/: gl.po
help/hi/: hi.po
help/hr/: hr.po
help/hr/figures/: add-files-button.png.license
help/hu/: hu.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/lt/: lt.po
help/nb_NO/: nb_NO.po
help/nl/: nl.po
help/nl/figures/: add-folders-button.png.license
help/nn/: nn.po
help/oc/: oc.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/ru/figures/: add-folders-button.png.license
help/si/: si.po
help/sr/: sr.po
help/sv/: sv.po
help/ta/: ta.po
help/tr/: tr.po
help/uk/: uk.po
help/ur/: ur.po
help/zh_CN/: zh_CN.po
help/zh_CN/figures/: clean-button.png.license
help/zh_TW/: zh_TW.po
metadatacleaner/: aboutdialog.py  aboutmetadataprivacydialog.py  aboutremovingmetadatadialog.py  addfilesbutton.py  app.py  cleanmetadatabutton.py  emptyview.py  file.py  filebutton.py  filechooserdialog.py  filepopover.py  filerow.py  filesmanager.py  filesview.py  menubutton.py  menupopover.py  meson.build  metadataview.py  savefilesbutton.py  savewarningdialog.py  shortcutsdialog.py  statusindicator.py  window.py
metadatacleaner/modules/: file.py  filestore.py  logger.py  metadata.py
metadatacleaner/ui/: __init__.py  aboutdialog.py  addfilesbutton.py  badge.py  cleaningwarningdialog.py  cleanmetadatabutton.py  creditsrole.py  detailsview.py  emptyview.py  filechooserdialog.py  filerow.py  filesview.py  infodetails.py  menubutton.py  metadatadetails.py  metadatadetailsrow.py  outbutton.py  savewarningdialog.py  settingsbutton.py  statusindicator.py  window.py
po/: LINGUAS  POTFILES  da.po  de.po  es.po  es.po.license  eu.po  fi.po  fr.po  fr.romainvigier.MetadataCleaner.pot  fr@formal.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb_NO.po  nl.po  nn.po  oc.po  pt_BR.po  ru.po  si.po  sv.po  sv.po.license  tr.po
screenshots/: Dockerfile  application-1.ui  application-2.ui  application-3.ui  application-4.ui  application.css  common.css  help-add-files-button.css  help-add-files-button.ui  help-add-folders-button.css  help-add-folders-button.ui  help-clean-button.ui  help-metadata-example.css  help-metadata-example.ui  screenshot.py  website.css  website.ui
tests/: meson.build
website/: index.html  style.css
website/fonts/: PTSans-Bold.woff.license  WorkSans-Bold.woff.license
