# SPDX-FileCopyrightText: 2021 Romain Vigier <contact AT romainvigier.fr>
# SPDX-License-Identifier: GPL-3.0-or-later

gnome.yelp(
  APP_ID,
  sources: [
    'general.page',
    'index.page',
    'usage.page'
  ],
  media: [
    'figures/icon.svg',
    'figures/add-files-button.png',
    'figures/clean-button.png',
    'figures/metadata-example.png',
  ],
)
